--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -14,7 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+
+        buildFeatures{
+            dataBinding = true
+            viewBinding = true
+        }
+        }
 
     buildTypes {
         release {
@@ -31,14 +37,27 @@ android {
     }
     compileSdkVersion 33
     buildToolsVersion '33.0.0'
+    buildFeatures {
+        viewBinding true
+    }
 }
+
 
 dependencies {
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'  // circular image library
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'   // Progress Dialog library
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+   // implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
